[r] 905 - Attempt to fix whitespace on home page

--- a/static/css/home.scss
+++ b/static/css/home.scss
@@ -4,7 +4,6 @@
   margin-top: 100px;
   text-align: center;
   //height: calc(100vh - 330px);
-  overflow: scroll;
   box-sizing: border-box;
   .subtitle {
     font-family: var(--sub-title-font);
